--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
+  <canvas id="binaryCanvas"></canvas>
   <div class="container">
     <div class="glass-card">
 
@@ -35,5 +35,6 @@
 
   <script src="js/config.js"></script>
   <script src="js/login.js"></script>
+  <script src="js/binary.js"></script>
 </body>
 </html>
