--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
   <title>TechHunt — Game</title>
 
   <!-- Inter Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <div id="levelCompletedOverlay" class="overlay hidden">
@@ -25,7 +25,7 @@
 </div>
 
 <body>
-
+    <canvas id="binaryCanvas"></canvas>
   <div class="container">
     <div class="glass-card game-card">
 
@@ -51,5 +51,6 @@
 
   <script src="js/config.js"></script>
   <script src="js/game.js"></script>
+  <script src="js/binary.js"></script>
 </body>
 </html>
