--- a/frontend-direc/index.html
+++ b/frontend-direc/index.html
@@ -9,7 +9,7 @@
   <!-- Inter Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
   <canvas id="binaryCanvas"></canvas>
@@ -26,15 +26,17 @@
         autocomplete="off"
       />
 
-      <button onclick="login()">Continue</button>
+      <!-- <button onclick="login()">Continue</button> -->
+       <button type="button" onclick="loginTeam()">Continue</button>
+
 
       <p id="msg" class="message"></p>
 
     </div>
   </div>
 
-  <script src="js/config.js"></script>
-  <script src="js/login.js"></script>
-  <script src="js/binary.js"></script>
+  <script src="./js/config.js"></script>
+  <script src="./js/login.js"></script>
+  <script src="./js/binary.js"></script>
 </body>
 </html>
