Stable Backend & Frontend deployed

--- a/frontend-direc/game.html
+++ b/frontend-direc/game.html
@@ -36,6 +36,7 @@
       </h2>
       <div id="clue"></div>
       <div id="message"></div>
+      <p id="hintText"></p>
 
       <input
         type="text"
@@ -44,7 +45,7 @@
         autocomplete="off"
       />
 
-      <button id="submitBtn" type="button">Submit</button>
+      <button id="submitBtn" type="button" onclick="submitAnswer()">Submit</button>
       <button id="testQRBtn" type="button">TEST QR (DEV)</button>
 
       <p class="status" id="statusMsg"></p>
