--- a/frontend-direc/index.html
+++ b/frontend-direc/index.html
@@ -27,7 +27,7 @@
       />
 
       <!-- <button onclick="login()">Continue</button> -->
-       <button type="button" onclick="loginTeam()">Continue</button>
+       <button type="button" onclick="login()">Continue</button>
 
 
       <p id="msg" class="message"></p>
