ADMIN-PANEL FETCHED

--- a/frontend-direc/game.html
+++ b/frontend-direc/game.html
@@ -6,23 +6,10 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>TechHunt — Game</title>
-
-  <!-- Inter Font -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet"> -->
+  <link rel="icon" type="image/png" href="./img/IIC.png">
   <link rel="stylesheet" href="./css/style.css" />
 </head>
-<!-- <div id="levelCompletedOverlay" class="overlay hidden">
-  <div class="glass-popup">
-    <div class="check-icon">✔</div>
-    <h3>Level Completed</h3>
-    <p>
-      You have already submitted the answer.<br />
-      Please scan the next QR to continue.
 
-      <button class="popup-btn" onclick="closeLevelPopup()">OK</button>
-    </p>
-  </div>
-</div> -->
 
 <body>
     <canvas id="binaryCanvas"></canvas>
@@ -46,7 +33,6 @@
       />
 
       <button id="submitBtn" type="button" onclick="submitAnswer()">Submit</button>
-      <button id="testQRBtn" type="button">TEST QR (DEV)</button>
 
       <p class="status" id="statusMsg"></p>
 
