FIXED MOBILE VIEW

--- a/frontend-direc/admin.html
+++ b/frontend-direc/admin.html
@@ -32,7 +32,8 @@
 
     
     <section class="admin-section active">
-      <table class="admin-table">
+      <div class="table-wrapper">
+        <table class="admin-table">
         <thead>
           <tr>
             <th>#</th>
@@ -49,6 +50,8 @@
         </thead>
         <tbody id="adminTable"></tbody>
       </table>
+      </div>
+      
     </section>
 
   </div>
