--- a/frontend-direc/admin.html
+++ b/frontend-direc/admin.html
@@ -12,6 +12,13 @@
 
 <body>
     <canvas id="binaryCanvas"></canvas>
+    <div id="backendLoader" class="backend-loader">
+  <div class="loader-card glass-card">
+    <div class="spinner"></div>
+    <p>Connecting to backend…</p>
+    <span>This may take a few seconds</span>
+  </div>
+</div>
 
  
   <div class="admin-wrapper glass-card">
@@ -58,6 +65,10 @@
   <script src="js/config.js"></script>
   <script src="js/admin.js"></script>
   <script src="js/binary.js"></script>
+
+  <div id="backendToast" class="backend-toast">
+  Backend live
+</div>
   
 </body>
 </html>
